# target-annotation

./: .coveragerc  .gitattributes  .gitignore  README.md  make_build.sh  pyproject.toml  setup.cfg
conda.recipe/: meta.yaml
docs/: BUILD_INSTRUCTIONS.md  ExtractTable_example.ipynb  TargetAnnotation_example.ipynb  build.md  conf.py  index.md  install.md  reference.md  requirements.txt
docs/_templates/: module.rst_t  package.rst_t
docs/modules/: analysis_functions.extract_table.rst  analysis_functions.ontology_source.rst  analysis_functions.open_targets.rst  analysis_functions.pharos.rst  analysis_functions.raw_simulations.rst  analysis_functions.rst  analysis_functions.target_annotation.rst  analysis_functions.utils.exceptions.rst  analysis_functions.utils.retry.rst  analysis_functions.utils.rst  analysis_functions.utils.util.rst  target_annotation.extract_table.rst  target_annotation.ontology_source.rst  target_annotation.open_targets.rst  target_annotation.rst  target_annotation.stringdb.rst  target_annotation.utils.exceptions.rst  target_annotation.utils.retry.rst  target_annotation.utils.rst
src/: .coveragerc  .gitattributes  requirements.txt  setup.py
src/target_annotation/: __init__.py  _version.py  extract_table.py  ontology_source.py
src/tests/: test_extract_table.py  test_retry.py  test_stringdb.py  test_util.py
target_annotation/: __init__.py  _version.py  open_targets.py  pharos.py  stringdb.py  target_annotation.py
target_annotation/utils/: retry.py  (+2 more)
tests/: test_ontology_source.py  test_open_targets.py  test_pharos.py  test_target_annotation.py
(+66 files in other folders)
