[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "target-annotation"
dynamic = ["version"]
description = "This package provides modules to annotate targets"
authors = [
  { name="Derek Walkama", email="derek.m.walkama@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "requests-cache>=1.0.0",
    "typeguard>=4.0.0",
    "pandas",
    "numpy",
    "tqdm",
    "ipykernel",
    "stopit",
    "openpyxl"
]

[project.urls]
Repository = "https://github.com/d-walkama/target-annotation.git"
Documentation = "https://target-annotation.readthedocs.io/"
Issues = "https://github.com/d-walkama/target-annotation/issues"
